// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Divider baseVue demo works fine 1`] = `
<div>
  <p>
    
    这是第一种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。
  
  </p>
   
  <div
    class="t-divider t-divider--horizontal"
  />
   
  <p>
    
    这是第二种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。
  
  </p>
   
  <div
    class="t-divider t-divider--horizontal t-divider--dashed"
  />
   
  <p>
    
    这是第三种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。
  
  </p>
</div>
`;

exports[`Divider Divider textVue demo works fine 1`] = `
<div>
  <p>
    
    这是第一种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。
  
  </p>
   
  <div
    class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-left"
  >
    <span
      class="t-divider__inner-text"
    >
      TDesign
    </span>
  </div>
   
  <p>
    
    这是第二种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。
  
  </p>
   
  <div
    class="t-divider t-divider--horizontal t-divider--dashed t-divider--with-text t-divider--with-text-center"
  >
    <span
      class="t-divider__inner-text"
    >
      TDesign
    </span>
  </div>
   
  <p>
    
    这是第三种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。
  
  </p>
   
  <div
    class="t-divider t-divider--horizontal t-divider--dashed t-divider--with-text t-divider--with-text-right"
  >
    <span
      class="t-divider__inner-text"
    >
      TDesign
    </span>
  </div>
   
  <p>
    
    这是第四种类型的内容元素或信息数据，通过分割线进行分割。分割线方便用户清晰明确的读取和预览，减少信息符合，提高用户使用效率。避免大段内容的聚集、信息负荷过多，导致信息获取或内容操作效率降低。
  
  </p>
</div>
`;

exports[`Divider Divider verticalVue demo works fine 1`] = `
<div>
  <span>
    正直
  </span>
   
  <div
    class="t-divider t-divider--vertical"
  />
   
  <span>
    进取
  </span>
   
  <div
    class="t-divider t-divider--vertical"
  />
   
  <span>
    协作
  </span>
   
  <div
    class="t-divider t-divider--vertical t-divider--dashed"
  />
   
  <span>
    创造
  </span>
</div>
`;
